Simplified pull multi creation. Fixed problem with both pull and push stopped when nack'ing messeges. Upgraded to Quarkus 3.7.4